apps/seraui/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seraui
  namespace: seraui
spec:
  endpointSelector:
    matchLabels:
      app: seraui
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: cloudflare
            k8s:io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports: [{ port: "3000", protocol: TCP }]
  egress:
    - toEndpoints:
        - matchLabels:
            app: sera
            k8s:io.kubernetes.pod.namespace: sera
      toPorts:
        - ports: [{ port: "3001", protocol: TCP }]
    - toEndpoints:
        - matchLabels:
            app: authentik
            k8s:io.kubernetes.pod.namespace: authentik
      toPorts:
        - ports:
            - { port: "9000", protocol: TCP }
            - { port: "9443", protocol: TCP }
    - toEntities: [host]
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules:
            dns: [{ matchPattern: "*" }]
    - toFQDNs:
        - matchName: "auth.reclyptor.com"
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
